--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,4 @@
-name:                module
+name:                modulo
 version:             0.1.0.0
 github:              "flipstone/modulo"
 license:             BSD3
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/module#readme>
+description:         Please see the README on GitHub at <https://github.com/flipstone/modulo#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -33,7 +33,7 @@ library:
 ghc-options: -Wall -Werror
 
 executables:
-  module-exe:
+  modulo-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -41,10 +41,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - module
+    - modulo
 
 tests:
-  module-test:
+  modulo-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -52,4 +52,5 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - module
+    - modulo
+
