Only shows imports of local modules in import list
Modulo is intended to manage the modules of a single project, but
modules include imports from many sources outside the project. We can
exclude those simply by checking to see if the target of the import is a
module that appears in our import list.

These leaves an edge case to be aware of that we may want to fill at
some point: modules that contain no imports. Technically we could fail
to find a cycle if one of the modules involved in it happen to only use
function from Prelude. This is a very small edge case that, so I've
decided to let it be for now.

--- a/modulo.cabal
+++ b/modulo.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8b06781b372a4389326b64b682364d935196634c4b5f11a70b058e5dd0109009
+-- hash: 1e3729231f768917645c545ca0a6fa609b4b0211ecf76537153eaf43a759cc06
 
 name:           modulo
 version:        0.1.0.0
@@ -29,6 +29,9 @@ library
   exposed-modules:
       Modulo.Directory
       Modulo.Imports
+      Modulo.Imports.Load
+      Modulo.Imports.Local
+      Modulo.Imports.Types
   other-modules:
       Paths_modulo
   hs-source-dirs:
