Finds and prints all tree dependency cycles in the graph
The output this gives is not yet particularly digestable. In particular,
it does not tell you which imports lead to the cycle nor make any
attempt to deduplicate results in the tree which are caused by the same
import cycles.

--- a/package.yaml
+++ b/package.yaml
@@ -23,8 +23,10 @@ dependencies:
 - base >= 4.7 && < 5
 - containers
 - directory
+- dlist
 - filepath
 - haskell-src-exts
+- mtl
 - unix
 
 library:
