--- a/modulo.cabal
+++ b/modulo.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.2.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 737de55c5f629cc433fdcdb25e528a1cc4afa82fc41aacda4f8683fc8bf7433b
+-- hash: 48ce07ebfb468187390eb73fddab8e1b23ef6c32b4916f08b046313cd53a3865
 
 name:           modulo
 version:        0.1.0.0
@@ -29,6 +29,7 @@ library
   exposed-modules:
       Modulo.Dependencies
       Modulo.Directory
+      Modulo.FindCycle
       Modulo.Imports
       Modulo.Imports.Load
       Modulo.Imports.Local
@@ -42,8 +43,10 @@ library
       base >=4.7 && <5
     , containers
     , directory
+    , dlist
     , filepath
     , haskell-src-exts
+    , mtl
     , unix
   default-language: Haskell2010
 
@@ -58,9 +61,11 @@ executable modulo-exe
       base >=4.7 && <5
     , containers
     , directory
+    , dlist
     , filepath
     , haskell-src-exts
     , modulo
+    , mtl
     , unix
   default-language: Haskell2010
 
@@ -76,8 +81,10 @@ test-suite modulo-test
       base >=4.7 && <5
     , containers
     , directory
+    , dlist
     , filepath
     , haskell-src-exts
     , modulo
+    , mtl
     , unix
   default-language: Haskell2010
