--- a/modulint.cabal
+++ b/modulint.cabal
@@ -4,13 +4,13 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 48ce07ebfb468187390eb73fddab8e1b23ef6c32b4916f08b046313cd53a3865
+-- hash: ef65a9d494220b2ca0642144586eff1ca94ef93d2619db910f74cb92750efed0
 
-name:           modulo
+name:           modulint
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/flipstone/modulo#readme>
-homepage:       https://github.com/flipstone/modulo#readme
-bug-reports:    https://github.com/flipstone/modulo/issues
+description:    Please see the README on GitHub at <https://github.com/flipstone/modulint#readme>
+homepage:       https://github.com/flipstone/modulint#readme
+bug-reports:    https://github.com/flipstone/modulint/issues
 author:         Flipstone Technology Partners
 maintainer:     development@flipstone.com
 copyright:      2020 Flipstone Technology Partners
@@ -23,19 +23,19 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/flipstone/modulo
+  location: https://github.com/flipstone/modulint
 
 library
   exposed-modules:
-      Modulo.Dependencies
-      Modulo.Directory
-      Modulo.FindCycle
-      Modulo.Imports
-      Modulo.Imports.Load
-      Modulo.Imports.Local
-      Modulo.Imports.Types
+      Modulint.Dependencies
+      Modulint.Directory
+      Modulint.FindCycle
+      Modulint.Imports
+      Modulint.Imports.Load
+      Modulint.Imports.Local
+      Modulint.Imports.Types
   other-modules:
-      Paths_modulo
+      Paths_modulint
   hs-source-dirs:
       src
   ghc-options: -Wall -Werror
@@ -50,10 +50,10 @@ library
     , unix
   default-language: Haskell2010
 
-executable modulo-exe
+executable modulint
   main-is: Main.hs
   other-modules:
-      Paths_modulo
+      Paths_modulint
   hs-source-dirs:
       app
   ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
@@ -64,16 +64,16 @@ executable modulo-exe
     , dlist
     , filepath
     , haskell-src-exts
-    , modulo
+    , modulint
     , mtl
     , unix
   default-language: Haskell2010
 
-test-suite modulo-test
+test-suite modulint-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_modulo
+      Paths_modulint
   hs-source-dirs:
       test
   ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
@@ -84,7 +84,7 @@ test-suite modulo-test
     , dlist
     , filepath
     , haskell-src-exts
-    , modulo
+    , modulint
     , mtl
     , unix
   default-language: Haskell2010
