--- a/package.yaml
+++ b/package.yaml
@@ -22,12 +22,15 @@ description:         Please see the README on GitHub at <https://github.com/flip
 dependencies:
 - base >= 4.7 && < 5
 - containers
+- dhall
 - directory
 - dlist
 - filepath
 - haskell-src-exts
 - mtl
+- optparse-applicative
 - unix
+- text
 
 library:
   source-dirs: src
