--- a/modulint.cabal
+++ b/modulint.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3405fadaa2589355c8d477411b54ed7e2fd3a03e60d4383a05e8d93958011c29
+-- hash: 09ec77dc2d91d0c4df56961a8996b3fefd482fd956468dc2e41b34a32a74f89d
 
 name:           modulint
 version:        0.1.0.0
@@ -47,17 +47,15 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring
-    , containers
-    , dhall
-    , directory
-    , dlist
-    , file-embed
-    , filepath
-    , haskell-src-exts
-    , mtl
-    , optparse-applicative
+    , containers >=0.6 && <0.7
+    , dhall >=1.30 && <1.31
+    , directory >=1.3 && <1.4
+    , file-embed >=0.0 && <0.1
+    , filepath >=1.4 && <1.5
+    , haskell-src-exts >=1.20 && <1.24
+    , optparse-applicative >=0.14 && <0.17
     , text
-    , unix
+    , unix >=2.7 && <2.8
   default-language: Haskell2010
 
 executable modulint
@@ -70,18 +68,16 @@ executable modulint
   build-depends:
       base >=4.7 && <5
     , bytestring
-    , containers
-    , dhall
-    , directory
-    , dlist
-    , file-embed
-    , filepath
-    , haskell-src-exts
+    , containers >=0.6 && <0.7
+    , dhall >=1.30 && <1.31
+    , directory >=1.3 && <1.4
+    , file-embed >=0.0 && <0.1
+    , filepath >=1.4 && <1.5
+    , haskell-src-exts >=1.20 && <1.24
     , modulint
-    , mtl
-    , optparse-applicative
+    , optparse-applicative >=0.14 && <0.17
     , text
-    , unix
+    , unix >=2.7 && <2.8
   default-language: Haskell2010
 
 test-suite modulint-test
@@ -96,16 +92,14 @@ test-suite modulint-test
       HUnit
     , base >=4.7 && <5
     , bytestring
-    , containers
-    , dhall
-    , directory
-    , dlist
-    , file-embed
-    , filepath
-    , haskell-src-exts
+    , containers >=0.6 && <0.7
+    , dhall >=1.30 && <1.31
+    , directory >=1.3 && <1.4
+    , file-embed >=0.0 && <0.1
+    , filepath >=1.4 && <1.5
+    , haskell-src-exts >=1.20 && <1.24
     , modulint
-    , mtl
-    , optparse-applicative
+    , optparse-applicative >=0.14 && <0.17
     , text
-    , unix
+    , unix >=2.7 && <2.8
   default-language: Haskell2010
