--- a/package.yaml
+++ b/package.yaml
@@ -22,16 +22,14 @@ description:         Please see the README on GitHub at <https://github.com/flip
 dependencies:
 - base >= 4.7 && < 5
 - bytestring
-- containers
-- dhall
-- directory
-- dlist
-- file-embed
-- filepath
-- haskell-src-exts
-- mtl
-- optparse-applicative
-- unix
+- containers >= 0.6 && < 0.7
+- dhall >= 1.30 && < 1.31
+- directory >= 1.3 && < 1.4
+- file-embed >= 0.0 && < 0.1
+- filepath >= 1.4 && < 1.5
+- haskell-src-exts >= 1.20 && < 1.24
+- optparse-applicative >= 0.14 && < 0.17
+- unix >= 2.7 && < 2.8
 - text
 
 library:
