Add basic support for rules on package qualification.

--- a/examples/examples.cabal
+++ b/examples/examples.cabal
@@ -72,6 +72,7 @@ library
 
     -- Other library packages from which modules are imported.
     build-depends:    base >=4.15.1.0
+                      , text
                       , unliftio
                       , henforcer
 
