--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -82,13 +82,17 @@ library henforcer-internal
   if flag(ci)
     import: ci-warnings
 
+  ghc-options:
+    -funbox-strict-fields
+    -O2
+
   build-depends:
       base >=4.7 && <5
-    , containers ^>=0.6
-    , dhall >=1.28 && < 1.42
+    , containers >=0.6 && < 0.7
+    , dhall >=1.28 && < 1.43
     , ghc >= 9.2.1 && <9.5
-    , optparse-applicative >=0.14 && <0.18
-    , text >=1.2 && <2.1
+    , optparse-applicative >=0.14 && <0.19
+    , text >=1.2 && <2.2
 
   default-language: Haskell2010
 
@@ -100,6 +104,10 @@ library
 
   if flag(ci)
     import: ci-warnings
+
+  ghc-options:
+    -funbox-strict-fields
+    -O2
 
   build-depends:
       henforcer:henforcer-internal
@@ -127,10 +135,10 @@ executable henforcer
 
   build-depends:
       base >=4.7 && <5
-    , bytestring ^>= 0.11
-    , directory ^>=1.3
+    , bytestring >= 0.11 && < 0.13
+    , directory >=1.3 && < 1.5
     , file-embed ==0.0.*
-    , filepath ^>=1.4
+    , filepath >=1.4 && < 1.6
     , henforcer:henforcer-internal
 
   default-language: Haskell2010
