Update to configuration
Configuration is now more concise and consistent particularly when
applying some rules to any given module and having some for a
specified module.

When processing imports, some attempt is made at looking at each
import for all the various rules configured in a single shot. This
uses DList now to continually append any failures.

Also, this adds some rules for enforcing the @since haddock annotation
on exports.

Finally, this simplifies both the configuration for users and the
implementation by collapsing rules that are different sorts of
"maximum" or "minimum".

--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -64,18 +64,19 @@ library henforcer-internal
       Henforcer.CodeStructure.Import
       Henforcer.CodeStructure.Import.AllowedAliasUniqueness
       Henforcer.CodeStructure.Import.Import
-      Henforcer.CodeStructure.Import.MaxOpenUnaliasedImports
       Henforcer.CodeStructure.Import.Scheme
       Henforcer.CodeStructure.Import.Scheme.Alias
       Henforcer.CodeStructure.Import.Scheme.PackageQualifier
       Henforcer.CodeStructure.Import.Scheme.Safe
       Henforcer.CodeStructure.Import.Scheme.Scheme
-      Henforcer.MaxUndocumented
       Henforcer.CodeStructure.TreeName
       Henforcer.Checks.DocumentationCheck
       Henforcer.Checks.ImportCheck
       Henforcer.Checks.ImportCheck.Check
       Henforcer.Checks.ImportCheck.CheckFailure
+      Henforcer.Rules
+      Henforcer.Rules.Maximum
+      Henforcer.Rules.Minimum
 
   autogen-modules:
       Paths_henforcer
@@ -93,6 +94,7 @@ library henforcer-internal
       base >=4.7 && <5
     , containers >=0.6 && < 0.8
     , dhall >=1.28 && < 1.43
+    , dlist >=1.0 && <1.1
     , ghc >= 9.2.1 && <9.9
     , optparse-applicative >=0.14 && <0.19
     , pollock >= 0.1 && <0.2
