Add module header rules.
Adds rules that allow one to ensure copyright,description,license, and
maintainer fields in the haddock module header are present and
non-empty.

--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -77,6 +77,7 @@ library henforcer-internal
       Henforcer.Rules
       Henforcer.Rules.Maximum
       Henforcer.Rules.Minimum
+      Henforcer.Rules.MustExistNonEmpty
 
   autogen-modules:
       Paths_henforcer
