--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -15,7 +15,7 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
-    data/*.dhall
+    data/henforcer.toml
 extra-doc-files:
     ChangeLog.md
 
@@ -78,6 +78,7 @@ library henforcer-internal
       Henforcer.Rules.Maximum
       Henforcer.Rules.Minimum
       Henforcer.Rules.MustExistNonEmpty
+      TomlHelper
 
   autogen-modules:
       Paths_henforcer
@@ -94,12 +95,12 @@ library henforcer-internal
   build-depends:
       base >=4.7 && <5
     , containers >=0.6 && < 0.8
-    , dhall >=1.28 && < 1.43
     , dlist >=1.0 && <1.1
     , ghc >= 9.2.1 && <9.9
     , optparse-applicative >=0.14 && <0.19
     , pollock >= 0.1 && <0.2
     , text >=1.2 && <2.2
+    , tomland == 1.3.3.2
 
   default-extensions: StrictData
   default-language: Haskell2010
@@ -147,7 +148,6 @@ executable henforcer
     , bytestring >= 0.11 && < 0.13
     , directory >=1.3 && < 1.5
     , file-embed ==0.0.*
-    , filepath >=1.4 && < 1.6
     , henforcer:henforcer-internal
 
   default-language: Haskell2010
