--- a/examples/examples.cabal
+++ b/examples/examples.cabal
@@ -51,7 +51,7 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -fplugin Henforcer -j2 -dynamic-too -haddock
+    ghc-options: -fplugin Henforcer "-fplugin-opt=Henforcer:-cconf/henforcer-config.toml" -j2 -haddock
 
 library
     -- Import common warning flags.
