--- a/examples/stack.yaml
+++ b/examples/stack.yaml
@@ -42,9 +42,9 @@ packages:
 #
 extra-deps:
   - ../
-  - haddock-api-2.26.0
-  - haddock-library-1.10.0
-
+  - pollock-0.1.0.0@sha256:c9b95b5144d788dfb0b79704e3bc706e6ce39114f100883977fd80db7eb34014,3642
+  - tomland-1.3.3.2@sha256:887dc39a8c9819deb8fcb6fde72e87dad4c94108b1736a5bf7215ccf3117bd0f,9474
+  - validation-selective-0.2.0.0@sha256:e1ab5482dede8bf676d729a09109c7c5f798363b9d458e4197a27afb8b48fdd3,3907
 allow-newer: true
 # Override default flag values for local packages and extra-deps
 # flags: {}
