Adds wildcard matching feature for rules and restructure 'allowedAliasUniqueness'
Now support a 'forPatternModules' top level array of tables with all
of ability to state rules as 'forSpecifiedModules'. Pattern rules will
take precedence over 'forAnyModule' and 'forSpecifiedModules' will
take the highest precedence. Structuring this way allows us to
reasonably add rules that apply to any module, override a subset of
those for a module tree and further override the tree rules for a
specific module.

Also the 'allowedAliasUniqueness' rule is reworked and now has two
acceptable table forms instead of a boolean that changes the behavior
of another key in the configuration. This should give us more clarity
for new users.

--- a/examples/conf/henforcer-config.toml
+++ b/examples/conf/henforcer-config.toml
@@ -10,7 +10,7 @@ moduleHeaderLicenseMustExistNonEmpty = true
 moduleHeaderMaintainerMustExistNonEmpty = false
 encapsulatedTrees = [ "Service.ThirdPartyPetsSite"]
 treeDependencies = [ {moduleTree = "Control.Monad", dependencies = ["PetStore"], note= "This is nonsensical but shows the kind of things we can here."} ]
-allowedAliasUniqueness = { allAliasesUnique = true, aliases = [ "Export" ], note = "Only 'Export' is allowed to be repeated so that we can create re-export modules with a single export of the form 'module Export'." } # The 'note' here is arbitrary but shows a real world use case
+allowedAliasUniqueness = { allAliasesUniqueExcept = [ "Export" ], note = "Only 'Export' is allowed to be repeated so that we can create re-export modules with a single export of the form 'module Export'." } # The 'note' here is arbitrary but shows a real world use case
 
 [[forAnyModule.allowedQualifications]]
 module = "UnliftIO"
@@ -62,6 +62,16 @@ alias="PetModel"
 [[forAnyModule.allowedQualifications.importScheme]]
 qualified = {unqualified = true}
 # safe = false
+
+[[forPatternModules]]
+pattern = "Pet*.**.Model"
+allowedOpenUnaliasedImports = 0
+
+[[forPatternModules]]
+# Note this will not be applied to PetStore.Pet.Model! The following pattern overlaps with the above
+# and the first matching pattern rule is the one that will win.
+pattern = "**.Model"
+allowedOpenUnaliasedImports = 1
 
 [[forSpecifiedModules]]
 module ="PetStore.Store"
